[package]
name = "collector"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0.86"
bytes = "1.7.1"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.16", features = ["derive", "env"] }
clickhouse = { version = "0.12.1", features = ["uuid", "rustls-tls", "time", "inserter"] }
ip-lookup = { path = "../lib/ip-lookup" }
kafka-model = { path = "../kafka-model/rust" }
nom = "7.1.3"
pnet = "0.35.0"
prost = "0.13.1"
rdkafka = "0.36.2"
serde = { version = "1.0.208", features = ["derive"] }
tls-parser = "0.11.0"
tokio = { version = "1.39.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.10.0", features = ["v7", "serde"] }

[dev-dependencies]
