[package]
name = "pcap-ingestor"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0.86"
bytes = "1.7.1"
chrono = { version = "0.4.38", features = ["serde"] }
kafka-model = { path = "../kafka-model/rust" }
nm-service = { path = "../lib/nm-service", features = ["clickhouse", "producer"] }
pnet = "0.35.0"
pnet_datalink = { version = "0.35.0", features = ["pcap"] }
prost = "0.13.1"
rdkafka = "0.36.2"
serde = { version = "1.0.208", features = ["derive"] }
tls-parser = "0.11.0"
tokio = { version = "1.39.2", features = ["full"] }
tracing = "0.1.40"