[package]
name = "pcap-ingestor"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
bytes = "1.7.1"
nm-service = { path = "../lib/nm-service", features = ["clickhouse", "producer"] }
pnet = "0.35.0"
pnet_datalink = { version = "0.35.0", features = ["pcap"] }
tls-parser = "0.11.0"