[package]
name = "xtask"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0.86"
bincode = "1.3.3"
brotli = "6.0.0"
clap = { version = "4.5.16", features = ["derive", "env"] }
ipnet = { version = "2.9.0", features = ["serde"] }
serde = { version = "1.0.208", features = ["derive"] }
simd-json = "0.13.10"
zip = "2.1.6"
