[package]
name = "kafka-model"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
bytes = { version = "1.7.1", features = ["serde"] }
chrono = "0.4.38"
prost = "0.13.1"
serde = { version = "1.0.208", features = ["derive"] }

[build-dependencies]
prost-build = "0.13.1"
