[package]
name = "nm-service"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
version.workspace = true

[features]
producer = [ "kafka-model" ]
consumer = [ "kafka-model" ]
kafka = [ "rdkafka", "kafka-model" ]

[dependencies]
clickhouse = { version = "0.12.1", features = ["uuid", "rustls-tls", "time", "inserter"], optional = true }
rdkafka = { version = "0.36.2", optional = true }
kafka-model = { path = "../../kafka-model/rust", optional = true }
clap = { version = "4.5.16", features = ["derive", "env"] }
anyhow = "1.0.86"
prost = { version = "0.13.1", default-features = false, features = ["std"] }
serde = { version = "1.0.208", features = ["derive"] }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
tokio = { version = "1.39.3", features = ["full"] }
simd-json = "0.13.10"

[dev-dependencies]
pretty_assertions = "1.4.0"
